Обновил документацию, исправил маленькие недочеты.
